# zero2prod

./: Cargo.toml  README.md  configuration.yaml
migrations/: 20221029084010_create_subscriptions_table.sql  20221029160038_fix_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
